# Capoo_cpp

./: .gitignore  CMakeLists.txt  README.md
3party/jsoncpp-1.9.5/: CMakeLists.txt
3party/spine/: spine-sfml.cpp
3party/spine-sfml-4.1.x/: CmakeLists.txt
data/: capoo_basic_001.json  capoo_basic_face_001.json  capoo_efx_bot.atlas.txt  capoo_efx_bot.json  capoo_food.json  capoo_hat_009.json  capoo_poo.atlas.txt  resources.rc
data/json/: Capoo_Action.json  Capoo_BasicSet.json  Capoo_BasicSet_fast.json  Capoo_DefaultSet.json  Capoo_Info.json  Capoo_Name.json  Capoo_SteamDLC.json  Capoo_UpgradeSet.json  Game_Achievement.json  Game_Parameter.json  Game_Time.json  conststring.json
data/spine/back/: capoo_back_004.atlas.txt  capoo_back_004.json  capoo_back_010.atlas.txt  capoo_back_010.json  capoo_back_012.atlas.txt  capoo_back_013.atlas.txt  capoo_back_014.atlas.txt  capoo_back_016.atlas.txt  capoo_back_016.json  capoo_back_018.atlas.txt  capoo_back_020.atlas.txt  capoo_back_022.atlas.txt  capoo_back_023.atlas.txt  capoo_back_024.atlas.txt  capoo_back_030.atlas.txt  capoo_back_030.json  capoo_back_032.atlas.txt  capoo_back_032.json  capoo_back_034.atlas.txt  capoo_back_037.atlas.txt  capoo_back_037.json  capoo_back_046.atlas.txt  capoo_back_046.json  capoo_back_056.atlas.txt  capoo_back_066.atlas.txt  capoo_back_068.atlas.txt  capoo_back_068.json  capoo_back_074.atlas.txt  capoo_back_077.atlas.txt  capoo_back_078.atlas.txt  capoo_back_078.json  capoo_back_079.atlas.txt  capoo_back_079.json  capoo_back_080.atlas.txt  capoo_back_081.atlas.txt  capoo_back_081.json  capoo_back_083.atlas.txt  capoo_back_091.atlas.txt  capoo_back_091.json  capoo_back_096.atlas.txt  (+18 more)
data/spine/body/: capoo_basic_001.atlas.txt  capoo_basic_001.json  capoo_basic_002.atlas.txt  capoo_basic_009.atlas.txt  capoo_basic_010.atlas.txt  capoo_basic_010.json  capoo_basic_011.atlas.txt  capoo_basic_011.json  capoo_basic_012.atlas.txt  capoo_basic_012.json  capoo_basic_030.atlas.txt  capoo_basic_030.json  capoo_basic_031.atlas.txt  capoo_basic_033.atlas.txt  capoo_basic_034.atlas.txt  capoo_basic_034.json  capoo_basic_035.atlas.txt  capoo_basic_036.atlas.txt  capoo_basic_036.json  capoo_basic_038.atlas.txt  capoo_basic_044.atlas.txt  capoo_basic_044.json  capoo_basic_050.atlas.txt  capoo_basic_051.atlas.txt  capoo_basic_051.json  capoo_basic_053.atlas.txt  capoo_basic_053.json  capoo_basic_057.atlas.txt  capoo_basic_057.json  capoo_basic_058.atlas.txt  capoo_basic_058.json  capoo_basic_060.atlas.txt  capoo_basic_060.json  capoo_basic_063.atlas.txt  capoo_basic_063.json  capoo_basic_064.atlas.txt  capoo_basic_064.json  capoo_basic_067.atlas.txt  capoo_basic_067.json  capoo_basic_069.atlas.txt  (+55 more)
data/spine/capoo_acc_body/: capoo_acc_body_108.atlas.txt  capoo_acc_body_108.json  capoo_acc_body_999.atlas.txt  capoo_acc_body_999.json
data/spine/capoo_acc_bot/: capoo_acc_bot_041.atlas.txt  capoo_acc_bot_049.atlas.txt  capoo_acc_bot_049.json  capoo_acc_bot_055.atlas.txt  capoo_acc_bot_055.json  capoo_acc_bot_072.atlas.txt  capoo_acc_bot_072.json  capoo_acc_bot_085.atlas.txt  capoo_acc_bot_086.atlas.txt  capoo_acc_bot_086.json  capoo_acc_bot_092.atlas.txt  capoo_acc_bot_105.atlas.txt  capoo_acc_bot_111.atlas.txt  capoo_acc_bot_111.json  capoo_acc_bot_112.atlas.txt  capoo_acc_bot_505.atlas.txt
data/spine/capoo_acc_top/: capoo_acc_top_116.atlas.txt  capoo_acc_top_116.json  capoo_acc_top_999.atlas.txt  capoo_acc_top_999.json
data/spine/char_talk/: char_talk.atlas.txt
data/spine/clothes/: capoo_clothes_028.atlas.txt  capoo_clothes_034.atlas.txt  capoo_clothes_071.atlas.txt  capoo_clothes_071.json  capoo_clothes_074.atlas.txt  capoo_clothes_501.atlas.txt  capoo_clothes_501.json
data/spine/efx_appear/: efx_capoo_appears_01.atlas.txt  efx_capoo_appears_01.json
data/spine/efx_bot/: capoo_efx_bot.atlas.txt  capoo_efx_bot.json
data/spine/efx_capoo_get/: efx_capoo_get_01.atlas.txt  efx_capoo_get_01.json  efx_capoo_get_02.atlas.txt  efx_capoo_get_02.json
data/spine/efx_mouse_01/: efx_mouse_01.atlas.txt  efx_mouse_01.json
data/spine/efx_top/: capoo_efx_top.atlas.txt  capoo_efx_top.json
data/spine/exf_emblem_get_01/: exf_emblem_get_01.atlas.txt  exf_emblem_get_01.json
data/spine/face/: capoo_basic_face_001.atlas.txt  capoo_basic_face_001.json  capoo_basic_face_002.atlas.txt  capoo_basic_face_002.json  capoo_basic_face_057.atlas.txt  capoo_basic_face_057.json  capoo_basic_face_058.atlas.txt  capoo_basic_face_064.atlas.txt  capoo_basic_face_064.json  capoo_basic_face_069.atlas.txt  (+8 more)
include/: CapooAction.h  CapooEntity.h  CapooManager.h  CapooView.h  Constants.h  Game.h  ResourceManager.h  SpineEntity.h  globalVar.h
include/spine/: spine-sfml.h
spine-cpp/: CMakeLists.txt
spine-sfml-cpp/: CMakeLists.txt
src/: CapooAction.cpp  CapooAction.h  CapooActionNameKey.cpp  CapooEntity.cpp  CapooEntity.h  CapooInfo.cpp  CapooInfo.h  CapooManager.cpp  CapooManager.h  CapooMove.cpp  CapooMove.h  CapooView.cpp  CapooView.h  Constants.h  Game.cpp  Game.h  GameParameter.cpp  GameParameter.h  ResourceManager.cpp  ResourceManager.h  SpineCharacterAssembler.cpp  SpineCharacterAssembler.h  SpineData.cpp  SpineData.h  SpineEntity.cpp  SpineEntity.h  example.cpp  globalVar.cpp  globalVar.h  loadCapoo.cpp  main.cpp
(+313 files in other folders)
